backend: get user profile service now show end_date for subscription object
